--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,12 @@
 # History files
 .Rhistory
-
 # Example code in package build process
 *-Ex.R
-
-# R data files from past sessions
-.Rdata
+.Rproj.user
+*.Rproj
+README.html
+*.Rcheck
+.Rbuildignore
+poweRlaw_0.*
+blackouts.txt
+plpva.r
