--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_install:
     - ./travis-tool.sh bootstrap
 install:
     - ./travis-tool.sh install_deps
-#    - ./travis-tool.sh github_package 
+    - ./travis-tool.sh github_package pingr
 
 
 notifications:
