--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -21,6 +21,7 @@ S3method(update_parameters,dislnormpl)
 S3method(update_parameters,pairdiffpl)
 export(bic)
 export(exp_cdf)
+export(get_xmins)
 export(initialise_pars)
 export(lines.diff)
 export(lines.difflnorm)
