--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -2,7 +2,12 @@
 
 S3method("[",plmcmc_mat)
 S3method(get_prior,diff)
-S3method(head,plmcmc_mat)
+S3method(lines,diff)
+S3method(lines,difflnorm)
+S3method(lines,dislnorm)
+S3method(lines,dislnormpl)
+S3method(lines,displ)
+S3method(lines,plmcmc_mat)
 S3method(ll,diff)
 S3method(ll,difflnorm)
 S3method(plot_mcmc,diff)
@@ -12,7 +17,6 @@ S3method(plot_mcmc,dislnorm)
 S3method(plot_mcmc,dislnormpl)
 S3method(plot_mcmc,displ)
 S3method(plot_mcmc,pairdiffpl)
-S3method(tail,plmcmc_mat)
 S3method(update_parameters,default)
 S3method(update_parameters,diff)
 S3method(update_parameters,difflnorm)
@@ -23,12 +27,6 @@ export(bic)
 export(exp_cdf)
 export(get_xmins)
 export(initialise_pars)
-export(lines.diff)
-export(lines.difflnorm)
-export(lines.dislnorm)
-export(lines.displ)
-export(lines.plmcmc_mat)
-export(ll)
 export(mcmc)
 export(plot_fit)
 export(plot_mcmc)
